空闲一周后重新开始该项目

--- a/Vue_study.html
+++ b/Vue_study.html
@@ -5,8 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue学习笔记</title>
+    <style>
+        li {
+            list-style-type: none;
+        }
+    
+        body {
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Vue学习笔记</h1>
+    <h3>第一天学习-前端工程话与webpack</h3>
+    <ol>
+        <li>前端工程化的相关概念</li>
+        <li>webpack的常见用法</li>
+        <li>打包发布</li>
+        <li>Source Map</li>
+    </ol>
+    <h3>第二天学习-Vue框架基础入门</h3>
+    <ol>
+        <li>Vue的基本使用步骤</li>
+        <li>Vue中常用的指令</li>
+        <li>vue-devtools调试工具</li>
+        <li>过滤器和侦听器</li>
+        <li>计算属性的用法</li>
+        <li>axios的基本用法-发起Ajax请求</li>
+        <li>vue-cli的安装和使用-生成工程化的Vue项目</li>
+    </ol>
+    <h3>第三天学习-组件和生命周期</h3>
+    <ol>
+        <li>组件的注册和使用</li>
+        <li>组件的props自定义属性</li>
+        <li>解决组件样式冲突</li>
+        <li>组件的生命周期</li>
+        <li>组件之间的通讯</li>
+    </ol>
+    <h3>第四天学习-ref及案例学习</h3>
+    <ol>
+        <li>使用ref引用DOM元素和组件实例</li>
+        <li>$nextTick的基本使用</li>
+        <li>购物车案例</li>
+    </ol>
+    <h3>第五天学习-Vue组件的高级用法</h3>
+    <ol>
+        <li>动态组件的使用</li>
+        <li>插槽的使用（默认插槽、具名插槽、作用域插槽）</li>
+        <li>自定义指令</li>
+    </ol>
+    <h3>第六天学习-路由</h3>
+    <ol>
+        <li>路由的基本配置与使用</li>
+        <li>路由重定向</li>
+        <li>嵌套路由、动态路由</li>
+        <li>编程式路由、路由导航守卫</li>
+    </ol>
+    <h3>第一天学习-前端工程话与webpack</h3>
+    <ol>
+        <li>前端工程化的相关概念-在前端开发中，将前端的使用的工具、技术、流程、经验进行工程化</li>
+        <li>webpack的常见用法</li>
+        <li>打包发布</li>
+        <li>Source Map</li>
+    </ol>
 </body>
 </html>
